--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="container">
  <header>
         <img src="images/Birds.JPG" alt="A photo of birds">
         <h1>DeAngelo Johnson</h1>
